unpackaged/main/default/objects/Platform__c/Platform__c.object-meta.xml
<CustomObject>
    <label>Platform</label>
    <nameField>
        <displayFormat>Platform-{000000}</displayFormat>
        <label>Platform Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>