unpackaged/main/default/objects/Platform__c/fields/ACD_Programming__c.field-meta.xml
<CustomField>
    <fullName>ACD_Programming__c</fullName>
    <label>ACD Programming</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>