unpackaged/main/default/objects/Platform__c/fields/Call_Park_Groups__c.field-meta.xml
<CustomField>
    <fullName>Call_Park_Groups__c</fullName>
    <label>Call Park Groups</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>