unpackaged/main/default/objects/Platform__c/fields/Controller_Mode__c.field-meta.xml
<CustomField>
    <fullName>Controller_Mode__c</fullName>
    <formula>text( Account__r.Controller_Mode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controller Mode</label>
    <type>Text</type>
</CustomField>