unpackaged/main/default/objects/Platform__c/fields/Hunt_Groups__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Groups__c</fullName>
    <label>Hunt Groups</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>