unpackaged/main/default/objects/Platform__c/fields/Incoming_Call_Flow__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Call_Flow__c</fullName>
    <label>Incoming Call Flow</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>