unpackaged/main/default/objects/Platform__c/fields/InstallerPasscode__c.field-meta.xml
<CustomField>
    <fullName>InstallerPasscode__c</fullName>
    <label>InstallerPasscode</label>
    <length>32</length>
    <type>Text</type>
</CustomField>