unpackaged/main/default/objects/Platform__c/fields/Lead_Install_Tech__c.field-meta.xml
<CustomField>
    <fullName>Lead_Install_Tech__c</fullName>
    <formula>Account__r.Install_Tech_1__r.FirstName &amp; " " &amp;  Account__r.Install_Tech_1__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Installer</label>
    <type>Text</type>
</CustomField>