unpackaged/main/default/objects/Platform__c/fields/Mailboxes_Special_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Mailboxes_Special_Consideration__c</fullName>
    <label>Mailboxes Special Consideration</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>