unpackaged/main/default/objects/Platform__c/fields/MCD_IP__c.field-meta.xml
<CustomField>
    <fullName>MCD_IP__c</fullName>
    <formula>Account__r.Server_MCD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCD IP</label>
    <type>Text</type>
</CustomField>