unpackaged/main/default/objects/Platform__c/fields/MiCC_ARID__c.field-meta.xml
<CustomField>
    <fullName>MiCC_ARID__c</fullName>
    <formula>Account__r.MiCC_ARID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MiCC ARID</label>
    <type>Text</type>
</CustomField>