unpackaged/main/default/objects/Platform__c/fields/MiCC_Reporting_Notes__c.field-meta.xml
<CustomField>
    <fullName>MiCC_Reporting_Notes__c</fullName>
    <label>MiCC Reporting Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>