unpackaged/main/default/objects/Platform__c/fields/MiCollab_ARID__c.field-meta.xml
<CustomField>
    <fullName>MiCollab_ARID__c</fullName>
    <formula>Account__r.Server_MiCollab_ARID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MiCollab ARID</label>
    <type>Text</type>
</CustomField>