unpackaged/main/default/objects/Platform__c/fields/MiCollab_Notes__c.field-meta.xml
<CustomField>
    <fullName>MiCollab_Notes__c</fullName>
    <label>MiCollab Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>