unpackaged/main/default/objects/Platform__c/fields/MiVCR_Notes__c.field-meta.xml
<CustomField>
    <fullName>MiVCR_Notes__c</fullName>
    <label>MiVCR Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>