unpackaged/main/default/objects/Platform__c/fields/MiVoice_ARID__c.field-meta.xml
<CustomField>
    <fullName>MiVoice_ARID__c</fullName>
    <formula>Account__r.Server_MCD_ARID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MiVoice ARID</label>
    <type>Text</type>
</CustomField>