unpackaged/main/default/objects/Platform__c/fields/MiVoice_Call_Recording_ARID__c.field-meta.xml
<CustomField>
    <fullName>MiVoice_Call_Recording_ARID__c</fullName>
    <formula>Account__r.MiVoice_Call_Recording_ARID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MiVoice Call Recording ARID</label>
    <type>Text</type>
</CustomField>