unpackaged/main/default/objects/Platform__c/fields/MiVoice_Call_Recording_Oaisys_IP__c.field-meta.xml
<CustomField>
    <fullName>MiVoice_Call_Recording_Oaisys_IP__c</fullName>
    <formula>Account__r.Server_Oaisys__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MiVoice Call Recording (Oaisys) IP</label>
    <type>Text</type>
</CustomField>