unpackaged/main/default/objects/Platform__c/fields/MiVoice_Platform__c.field-meta.xml
<CustomField>
    <fullName>MiVoice_Platform__c</fullName>
    <formula>text( Account__r.MiVoice_Platform__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MiVoice Platform</label>
    <type>Text</type>
</CustomField>