unpackaged/main/default/objects/Platform__c/fields/Network_Zone_1__c.field-meta.xml
<CustomField>
    <fullName>Network_Zone_1__c</fullName>
    <label>Network Zone 1</label>
    <length>24</length>
    <type>Text</type>
</CustomField>