unpackaged/main/default/objects/Platform__c/fields/Node__c.field-meta.xml
<CustomField>
    <fullName>Node__c</fullName>
    <formula>Account__r.Node_Element_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Node</label>
    <type>Text</type>
</CustomField>