unpackaged/main/default/objects/Platform__c/fields/Numbering_Plan__c.field-meta.xml
<CustomField>
    <fullName>Numbering_Plan__c</fullName>
    <label>Numbering Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>