unpackaged/main/default/objects/Platform__c/fields/Platform_Notes__c.field-meta.xml
<CustomField>
    <fullName>Platform_Notes__c</fullName>
    <label>Platform Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>