unpackaged/main/default/objects/Platform__c/fields/Porting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Porting_Notes__c</fullName>
    <label>Porting Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>