unpackaged/main/default/objects/Platform__c/fields/Ring_Groups__c.field-meta.xml
<CustomField>
    <fullName>Ring_Groups__c</fullName>
    <label>Ring Groups</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>