unpackaged/main/default/objects/Platform__c/fields/Server_MGB_1__c.field-meta.xml
<CustomField>
    <fullName>Server_MGB_1__c</fullName>
    <formula>Account__r.Server_MBG_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Server-MGB 1</label>
    <type>Text</type>
</CustomField>