unpackaged/main/default/objects/Platform__c/fields/Server_MGB_2__c.field-meta.xml
<CustomField>
    <fullName>Server_MGB_2__c</fullName>
    <formula>Account__r.Server_MBG_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Server-MGB 2</label>
    <type>Text</type>
</CustomField>