unpackaged/main/default/objects/Platform__c/fields/Server_MiCollab_IP__c.field-meta.xml
<CustomField>
    <fullName>Server_MiCollab_IP__c</fullName>
    <formula>Account__r.Server_MiCollab__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Server MiCollab IP</label>
    <type>Text</type>
</CustomField>