unpackaged/main/default/objects/Platform__c/fields/Server_Router__c.field-meta.xml
<CustomField>
    <fullName>Server_Router__c</fullName>
    <formula>Account__r.Server_Router__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Server-Router</label>
    <type>Text</type>
</CustomField>