unpackaged/main/default/objects/Platform__c/fields/Voice_Mail_Type1__c.field-meta.xml
<CustomField>
    <fullName>Voice_Mail_Type1__c</fullName>
    <formula>Text( Account__r.Voice_Mail_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voice Mail Type</label>
    <type>Text</type>
</CustomField>