unpackaged/main/default/objects/Platform__c/fields/Voicemail_to_Email_Notes__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_to_Email_Notes__c</fullName>
    <label>Voicemail to Email Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>